docs/v0.9/_sources/tutorials/misc/phasorpy_apps.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "tutorials/misc/phasorpy_apps.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: xml

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_tutorials_misc_phasorpy_apps.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_tutorials_misc_phasorpy_apps.py:


Interactive apps
================

Interactive educational applications.

The PhasorPy library includes interactive applications for educational
purposes. They open graphical user interfaces where parameters can be
adjusted via sliders and the resulting phasor and lifetime plots are
updated in real time. The apps can be started from the :doc:`/api/cli` or
programmatically. A matplotlib backend that supports interactive
windows is required.

.. GENERATED FROM PYTHON SOURCE LINES 17-29

Lifetime app
------------

Interactively plot time-domain signals, phasor coordinates, and
multi-frequency phase and modulation curves for a set of lifetime
components and their mixture at given frequency and fractional intensities.

Start the lifetime app from the command line::

    $ python -m phasorpy lifetime

or run the following code in a Python interpreter:

.. GENERATED FROM PYTHON SOURCE LINES 29-39

.. code-block:: Python


    from phasorpy.plot import LifetimePlots

    LifetimePlots(
        frequency=80.0,  # MHz
        lifetime=(0.4, 3.4, 8),  # ns
        fraction=(0.3, 0.5, 0.2),  # fractional intensities
        interactive=True,
    ).show()




.. image-sg:: /tutorials/misc/images/sphx_glr_phasorpy_apps_001.png
   :alt: Time domain, Phasor plot, Frequency domain
   :srcset: /tutorials/misc/images/sphx_glr_phasorpy_apps_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 40-42

Change frequency, lifetimes, and fractional intensities to see how the
phasor coordinates, phase and modulation, and decay curves respond.

.. GENERATED FROM PYTHON SOURCE LINES 44-57

FRET app
--------

Interactively plot phasor coordinates for Förster resonance energy transfer
(FRET) donor and acceptor channels as a function of frequency, donor and
acceptor lifetimes, FRET efficiency, fractions of donors undergoing FRET
(donor fretting), donor and acceptor bleedthrough, and background signal.

Start the FRET app from the command line::

    $ python -m phasorpy fret

or run the following code in a Python interpreter:

.. GENERATED FROM PYTHON SOURCE LINES 57-71

.. code-block:: Python


    from phasorpy.plot import PhasorPlotFret

    PhasorPlotFret(
        frequency=60.0,  # MHz
        donor_lifetime=4.2,  # ns
        acceptor_lifetime=3.0,  # ns
        fret_efficiency=0.5,  # 50%
        donor_fretting=0.9,  # 90% of donors can undergo FRET
        donor_bleedthrough=0.1,  # 10% donor signal in acceptor channel
        acceptor_bleedthrough=0.1,  # 10% acceptor signal in donor channel
        interactive=True,
    ).show()




.. image-sg:: /tutorials/misc/images/sphx_glr_phasorpy_apps_002.png
   :alt: FRET phasor plot
   :srcset: /tutorials/misc/images/sphx_glr_phasorpy_apps_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 72-74

Change frequency, FRET efficiency, lifetimes, and bleedthrough fractions
to see how the donor and acceptor phasor positions respond.


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 2.284 seconds)


.. _sphx_glr_download_tutorials_misc_phasorpy_apps.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: phasorpy_apps.ipynb <phasorpy_apps.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: phasorpy_apps.py <phasorpy_apps.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: phasorpy_apps.zip <phasorpy_apps.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
